--- a/models/svm/svm.ipynb
+++ b/models/svm/svm.ipynb
@@ -376,11 +376,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "trusted": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "best_f1 = 0.800027688418219\n",
+    "best_params= {\n",
+    "    'C': 70.50286208722827, \n",
+    "    'kernel': 'rbf', \n",
+    "    'gamma': 'scale', \n",
+    "    'max_features': 5000, \n",
+    "    'min_df': 4, \n",
+    "    'max_df': 0.7, \n",
+    "    'ngram_range': (1, 3)\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
