fix: change data location and feat: add svm with aug

--- a/models/svm/svm_with_aug.ipynb
+++ b/models/svm/svm_with_aug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-25T23:21:21.565004Z",
@@ -17,6 +17,7 @@
    "source": [
     "import logging\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from pathlib import Path\n",
     "import re\n",
     "import json\n",
@@ -37,7 +38,6 @@
     "from sklearn.metrics import (\n",
     "    accuracy_score,\n",
     "    precision_recall_fscore_support,\n",
-    "    f1_score,\n",
     "    matthews_corrcoef\n",
     ")\n",
     "from sklearn.pipeline import Pipeline, FeatureUnion\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-25T23:21:21.575211Z",
@@ -67,16 +67,17 @@
     "# Path configuration\n",
     "DATA_DIR = Path('../../data')\n",
     "TRAIN_PATH = DATA_DIR / 'train.csv'\n",
+    "AUGMENTED_DATA_PATH = DATA_DIR / 'train_augmented.csv'\n",
     "DEV_PATH = DATA_DIR / 'dev.csv'\n",
-    "MODEL_SAVE_PATH = Path('./models')\n",
-    "MODEL_SAVE_PATH.mkdir(parents=True, exist_ok=True)\n",
+    "# MODEL_SAVE_PATH = Path('./models')\n",
+    "# MODEL_SAVE_PATH.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "N_TRIALS = 25  # Number of Optuna trials"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-25T23:21:21.601832Z",
@@ -87,7 +88,18 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cpu')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_device() -> torch.device:\n",
     "    \"\"\"Determine the device to use for computations.\"\"\"\n",
@@ -103,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-25T23:21:21.627058Z",
@@ -116,22 +128,28 @@
    },
    "outputs": [],
    "source": [
-    "def prepare_data(train_df, dev_df):\n",
-    "    \"\"\"Prepare data for SVM training.\"\"\"\n",
+    "def prepare_data(train_df, aug_train_df, dev_df):\n",
+    "    \"\"\"Prepare data for XGBoost training.\"\"\"\n",
     "    # Combine claim and evidence into a single text feature for TF-IDF\n",
     "    train_df['text'] = train_df['Claim'] + \" [SEP] \" + train_df['Evidence']\n",
+    "    aug_train_df['text'] = aug_train_df['Claim'] + \" [SEP] \" + aug_train_df['Evidence']\n",
     "    dev_df['text'] = dev_df['Claim'] + \" [SEP] \" + dev_df['Evidence']\n",
     "    \n",
     "    # Extract labels\n",
     "    train_labels = train_df['label'].values\n",
+    "    aug_train_labels = aug_train_df['label'].values\n",
     "    dev_labels = dev_df['label'].values\n",
+    "    \n",
+    "    # Combine the augmented training data with the original training data\n",
+    "    train_df = pd.concat([train_df, aug_train_df])\n",
+    "    train_labels = np.concatenate([train_labels, aug_train_labels])\n",
     "    \n",
     "    return train_df, dev_df, train_labels, dev_labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "trusted": true
    },
@@ -159,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "trusted": true
    },
@@ -194,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "trusted": true
    },
@@ -239,21 +257,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_df = pd.read_csv(TRAIN_PATH)\n",
+    "aug_train_df = pd.read_csv(AUGMENTED_DATA_PATH)\n",
     "dev_df = pd.read_csv(DEV_PATH)\n",
-    "\n",
-    "\n",
-    "# Prepare data\n",
-    "train_df, dev_df, train_labels, dev_labels = prepare_data(train_df, dev_df)"
+    "   \n",
+    "train_df, dev_df, train_labels, dev_labels = prepare_data(train_df, aug_train_df, dev_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-25T23:21:21.644080Z",
@@ -342,7 +359,44 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-03-27 10:23:38 - Using device: cpu (Note: scikit-learn SVM implementation will utilize CPU)\n",
+      "[I 2025-03-27 10:23:38,362] A new study created in memory with name: svm_evidence_detection\n",
+      "2025-03-27 10:23:38 - Training SVM with hyperparameters: C=10.09590048574768, kernel=sigmoid, gamma=scale\n",
+      "2025-03-27 10:23:38 - Training SVM with hyperparameters: C=0.9268367074183124, kernel=linear, gamma=scale\n",
+      "c:\\Users\\willi\\Desktop\\Uni\\3rd_year\\NLU\\comp38412-not-broken\\.venv\\Lib\\site-packages\\optuna\\distributions.py:515: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains (1, 3) which is of type tuple.\n",
+      "  warnings.warn(message)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "HYPERPARAMETER TUNING\n",
+      "=====================\n",
+      "Running 25 trials...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\willi\\Desktop\\Uni\\3rd_year\\NLU\\comp38412-not-broken\\.venv\\Lib\\site-packages\\optuna\\distributions.py:515: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains (1, 1) which is of type tuple.\n",
+      "  warnings.warn(message)\n",
+      "c:\\Users\\willi\\Desktop\\Uni\\3rd_year\\NLU\\comp38412-not-broken\\.venv\\Lib\\site-packages\\optuna\\distributions.py:515: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains (1, 2) which is of type tuple.\n",
+      "  warnings.warn(message)\n",
+      "2025-03-27 10:23:38 - Training SVM with hyperparameters: C=13.243547220712877, kernel=linear, gamma=scale\n",
+      "2025-03-27 10:23:38 - Training SVM with hyperparameters: C=4.783721156833281, kernel=poly, gamma=scale\n",
+      "2025-03-27 10:23:38 - Training SVM with hyperparameters: C=69.79482818202428, kernel=linear, gamma=scale\n",
+      "2025-03-27 10:23:38 - Training SVM with hyperparameters: C=5.766803755455647, kernel=rbf, gamma=auto\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    print(\"\\nHYPERPARAMETER TUNING\")\n",
@@ -376,24 +430,6 @@
     "    for key, value in trial.params.items():\n",
     "        print(f\"    {key}: {value}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_f1 = 0.800027688418219\n",
-    "best_params= {\n",
-    "    'C': 70.50286208722827, \n",
-    "    'kernel': 'rbf', \n",
-    "    'gamma': 'scale', \n",
-    "    'max_features': 5000, \n",
-    "    'min_df': 4, \n",
-    "    'max_df': 0.7, \n",
-    "    'ngram_range': (1, 3)\n",
-    "}"
-   ]
   }
  ],
  "metadata": {
@@ -413,7 +449,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -427,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
