--- a/models/xgboost/xgboost.ipynb
+++ b/models/xgboost/xgboost.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "# Path configuration\n",
-    "DATA_DIR = Path('./data')\n",
+    "DATA_DIR = Path('../../data')\n",
     "TRAIN_PATH = DATA_DIR / 'train.csv'\n",
     "DEV_PATH = DATA_DIR / 'dev.csv'\n",
     "MODEL_SAVE_PATH = Path('./models')\n",
