--- a/models/xgboost/xgboost_with_aug.ipynb
+++ b/models/xgboost/xgboost_with_aug.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "# Path configuration\n",
-    "DATA_DIR = Path('./data')\n",
+    "DATA_DIR = Path('../../data')\n",
     "TRAIN_PATH = DATA_DIR / 'train.csv'\n",
     "AUGMENTED_DATA_PATH = DATA_DIR / 'train_augmented.csv'\n",
     "DEV_PATH = DATA_DIR / 'dev.csv'\n",
