feat: improve sampler and pruner

--- a/models/svm/svm_with_aug.ipynb
+++ b/models/svm/svm_with_aug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-25T23:21:21.565004Z",
@@ -13,7 +13,16 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\willi\\Desktop\\Uni\\3rd_year\\NLU\\comp38412-not-broken\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import logging\n",
     "import pandas as pd\n",
@@ -43,6 +52,9 @@
     "from sklearn.pipeline import Pipeline, FeatureUnion\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
     "# Set up logging\n",
     "logging.basicConfig(format='%(asctime)s - %(message)s',\n",
     "                    datefmt='%Y-%m-%d %H:%M:%S',\n",
@@ -51,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-25T23:21:21.575211Z",
@@ -72,12 +84,12 @@
     "# MODEL_SAVE_PATH = Path('./models')\n",
     "# MODEL_SAVE_PATH.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "N_TRIALS = 25  # Number of Optuna trials"
+    "N_TRIALS = 50  # Number of Optuna trials"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-25T23:21:21.601832Z",
@@ -95,7 +107,7 @@
        "device(type='cpu')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-25T23:21:21.627058Z",
@@ -149,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "trusted": true
    },
@@ -177,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "trusted": true
    },
@@ -212,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "trusted": true
    },
@@ -257,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-25T23:21:21.644080Z",
@@ -364,12 +376,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-03-27 10:23:38 - Using device: cpu (Note: scikit-learn SVM implementation will utilize CPU)\n",
-      "[I 2025-03-27 10:23:38,362] A new study created in memory with name: svm_evidence_detection\n",
-      "2025-03-27 10:23:38 - Training SVM with hyperparameters: C=10.09590048574768, kernel=sigmoid, gamma=scale\n",
-      "2025-03-27 10:23:38 - Training SVM with hyperparameters: C=0.9268367074183124, kernel=linear, gamma=scale\n",
-      "c:\\Users\\willi\\Desktop\\Uni\\3rd_year\\NLU\\comp38412-not-broken\\.venv\\Lib\\site-packages\\optuna\\distributions.py:515: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains (1, 3) which is of type tuple.\n",
-      "  warnings.warn(message)\n"
+      "2025-03-27 10:27:52 - Using device: cpu (Note: scikit-learn SVM implementation will utilize CPU)\n",
+      "[I 2025-03-27 10:27:52,109] A new study created in memory with name: svm_evidence_detection\n",
+      "2025-03-27 10:27:52 - Training SVM with hyperparameters: C=0.042830017992040816, kernel=linear, gamma=scale\n",
+      "2025-03-27 10:27:52 - Training SVM with hyperparameters: C=0.0848534566349578, kernel=rbf, gamma=auto\n"
      ]
     },
     {
@@ -379,21 +389,27 @@
       "\n",
       "HYPERPARAMETER TUNING\n",
       "=====================\n",
-      "Running 25 trials...\n"
+      "Running 50 trials...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\willi\\Desktop\\Uni\\3rd_year\\NLU\\comp38412-not-broken\\.venv\\Lib\\site-packages\\optuna\\distributions.py:515: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains (1, 1) which is of type tuple.\n",
-      "  warnings.warn(message)\n",
-      "c:\\Users\\willi\\Desktop\\Uni\\3rd_year\\NLU\\comp38412-not-broken\\.venv\\Lib\\site-packages\\optuna\\distributions.py:515: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains (1, 2) which is of type tuple.\n",
-      "  warnings.warn(message)\n",
-      "2025-03-27 10:23:38 - Training SVM with hyperparameters: C=13.243547220712877, kernel=linear, gamma=scale\n",
-      "2025-03-27 10:23:38 - Training SVM with hyperparameters: C=4.783721156833281, kernel=poly, gamma=scale\n",
-      "2025-03-27 10:23:38 - Training SVM with hyperparameters: C=69.79482818202428, kernel=linear, gamma=scale\n",
-      "2025-03-27 10:23:38 - Training SVM with hyperparameters: C=5.766803755455647, kernel=rbf, gamma=auto\n"
+      "2025-03-27 10:27:52 - Training SVM with hyperparameters: C=1.0175589843807158, kernel=linear, gamma=scale\n",
+      "2025-03-27 10:27:52 - Training SVM with hyperparameters: C=6.881339033999676, kernel=rbf, gamma=auto\n",
+      "2025-03-27 10:27:52 - Training SVM with hyperparameters: C=22.40456249307617, kernel=rbf, gamma=scale\n",
+      "2025-03-27 10:27:52 - Training SVM with hyperparameters: C=17.599421387414903, kernel=poly, gamma=auto\n",
+      "2025-03-27 10:27:52 - Training SVM with hyperparameters: C=0.09817466741610692, kernel=sigmoid, gamma=auto\n",
+      "2025-03-27 10:27:52 - Training SVM with hyperparameters: C=0.4172680314046847, kernel=linear, gamma=scale\n",
+      "2025-03-27 10:27:52 - Training SVM with hyperparameters: C=81.6625206596101, kernel=linear, gamma=scale\n",
+      "2025-03-27 10:27:52 - Training SVM with hyperparameters: C=1.7093447839335203, kernel=poly, gamma=auto\n",
+      "2025-03-27 10:27:52 - Training SVM with hyperparameters: C=3.0723510832100134, kernel=linear, gamma=scale\n",
+      "2025-03-27 10:27:52 - Training SVM with hyperparameters: C=0.12575206963211474, kernel=linear, gamma=scale\n",
+      "2025-03-27 10:27:52 - Training SVM with hyperparameters: C=0.019388299189482976, kernel=sigmoid, gamma=auto\n",
+      "2025-03-27 10:27:52 - Training SVM with hyperparameters: C=3.398184752468036, kernel=rbf, gamma=scale\n",
+      "2025-03-27 10:27:53 - Training SVM with hyperparameters: C=1.578905197887607, kernel=sigmoid, gamma=auto\n",
+      "2025-03-27 10:27:53 - Training SVM with hyperparameters: C=0.19395452904384608, kernel=rbf, gamma=auto\n"
      ]
     }
    ],
@@ -408,8 +424,14 @@
     "    logging.info(f\"Using device: {device} (Note: scikit-learn SVM implementation will utilize CPU)\")\n",
     "    \n",
     "    # Create a study with TPE sampler and MedianPruner\n",
-    "    sampler = TPESampler(seed=42)  # TPE sampler as requested\n",
-    "    pruner = MedianPruner(n_startup_trials=5, n_warmup_steps=5, interval_steps=2)\n",
+    "    sampler = TPESampler(seed=42, \n",
+    "                         n_startup_trials=int(N_TRIALS / 10), # First 10% of trials are random, then TPE\n",
+    "                         multivariate=True, \n",
+    "                         constant_liar=True) # constant_liar = True as we are doing distributed optimisation\n",
+    "\n",
+    "    pruner = MedianPruner(n_startup_trials=5, \n",
+    "                          n_warmup_steps=5, \n",
+    "                          interval_steps=2)\n",
     "    \n",
     "    study = optuna.create_study(\n",
     "        direction='maximize',  # Maximize accuracy\n",
@@ -419,7 +441,7 @@
     "    )\n",
     "    \n",
     "    try:\n",
-    "        study.optimize(objective, n_trials=N_TRIALS, n_jobs=6)\n",
+    "        study.optimize(objective, n_trials=N_TRIALS, n_jobs=-1)\n",
     "    except KeyboardInterrupt:\n",
     "        print(\"Hyperparameter tuning interrupted.\")\n",
     "    \n",
