feat: update gitignore and add analysis file

--- a/models/xgboost/xgboost_glove_with_aug.ipynb
+++ b/models/xgboost/xgboost_glove_with_aug.ipynb
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,48 @@
       "[I 2025-03-27 13:30:42,373] Trial 25 finished with value: 0.8040715311906416 and parameters: {'max_depth': 8, 'learning_rate': 0.12200054857321323, 'n_estimators': 324, 'min_child_weight': 1, 'gamma': 0.00010323784254919183, 'subsample': 0.9265320361669882, 'colsample_bytree': 0.5760572812148432, 'reg_alpha': 1.0256809209661201e-07, 'reg_lambda': 3.6662015950875205e-07}. Best is trial 8 with value: 0.8097585272316887.\n",
       "[I 2025-03-27 13:31:53,471] Trial 27 finished with value: 0.8017237186698075 and parameters: {'max_depth': 8, 'learning_rate': 0.12008646417522396, 'n_estimators': 164, 'min_child_weight': 6, 'gamma': 0.3242697051561732, 'subsample': 0.5412281375748266, 'colsample_bytree': 0.878526546810062, 'reg_alpha': 0.00039921046293034406, 'reg_lambda': 1.093846279646213e-06}. Best is trial 8 with value: 0.8097585272316887.\n",
       "[I 2025-03-27 13:32:09,405] Trial 28 finished with value: 0.7970132639923093 and parameters: {'max_depth': 8, 'learning_rate': 0.2111436017321559, 'n_estimators': 195, 'min_child_weight': 7, 'gamma': 0.0006883708877957508, 'subsample': 0.856903590640134, 'colsample_bytree': 0.893929189695395, 'reg_alpha': 0.0011894100688688797, 'reg_lambda': 5.984704248580911e-05}. Best is trial 8 with value: 0.8097585272316887.\n",
-      "[I 2025-03-27 13:32:17,480] Trial 23 finished with value: 0.8005956367583439 and parameters: {'max_depth': 4, 'learning_rate': 0.07927926389395602, 'n_estimators': 224, 'min_child_weight': 1, 'gamma': 0.014428465786158029, 'subsample': 0.9478966931052762, 'colsample_bytree': 0.9189132376331038, 'reg_alpha': 1.0677797111530778e-07, 'reg_lambda': 1.9889658802504888e-07}. Best is trial 8 with value: 0.8097585272316887.\n"
+      "[I 2025-03-27 13:32:17,480] Trial 23 finished with value: 0.8005956367583439 and parameters: {'max_depth': 4, 'learning_rate': 0.07927926389395602, 'n_estimators': 224, 'min_child_weight': 1, 'gamma': 0.014428465786158029, 'subsample': 0.9478966931052762, 'colsample_bytree': 0.9189132376331038, 'reg_alpha': 1.0677797111530778e-07, 'reg_lambda': 1.9889658802504888e-07}. Best is trial 8 with value: 0.8097585272316887.\n",
+      "[I 2025-03-27 13:33:03,514] Trial 26 finished with value: 0.7974768421815219 and parameters: {'max_depth': 8, 'learning_rate': 0.02959166296002727, 'n_estimators': 154, 'min_child_weight': 4, 'gamma': 0.0004180887308338726, 'subsample': 0.9217575389491547, 'colsample_bytree': 0.9832258824311527, 'reg_alpha': 0.056847071322856685, 'reg_lambda': 2.0197243242267138e-07}. Best is trial 8 with value: 0.8097585272316887.\n",
+      "[I 2025-03-27 13:34:59,191] Trial 31 finished with value: 0.8025730011799874 and parameters: {'max_depth': 7, 'learning_rate': 0.16987765889518938, 'n_estimators': 232, 'min_child_weight': 2, 'gamma': 0.12934385366808765, 'subsample': 0.7820918176851254, 'colsample_bytree': 0.8973249976259832, 'reg_alpha': 0.1944004878080268, 'reg_lambda': 8.19559036820566e-05}. Best is trial 8 with value: 0.8097585272316887.\n",
+      "[I 2025-03-27 13:35:25,457] Trial 34 finished with value: 0.7977520721723955 and parameters: {'max_depth': 5, 'learning_rate': 0.2938475434792541, 'n_estimators': 296, 'min_child_weight': 1, 'gamma': 0.0013135520198223913, 'subsample': 0.927659916325593, 'colsample_bytree': 0.5998308063049964, 'reg_alpha': 2.5461953955637597e-05, 'reg_lambda': 0.020646167191730704}. Best is trial 8 with value: 0.8097585272316887.\n",
+      "[I 2025-03-27 13:36:36,841] Trial 36 finished with value: 0.7979769740988935 and parameters: {'max_depth': 6, 'learning_rate': 0.2767464157243502, 'n_estimators': 127, 'min_child_weight': 1, 'gamma': 6.749220342950355e-06, 'subsample': 0.8767005316814535, 'colsample_bytree': 0.9968131046256142, 'reg_alpha': 8.038807383315653e-07, 'reg_lambda': 5.380300886810077e-07}. Best is trial 8 with value: 0.8097585272316887.\n",
+      "[I 2025-03-27 13:36:39,082] Trial 37 pruned. \n",
+      "[I 2025-03-27 13:36:56,800] Trial 39 finished with value: 0.7967245252381471 and parameters: {'max_depth': 8, 'learning_rate': 0.25206151114655784, 'n_estimators': 278, 'min_child_weight': 1, 'gamma': 0.0022424746355391737, 'subsample': 0.9933638577516656, 'colsample_bytree': 0.5004108710073747, 'reg_alpha': 0.00023408054504232286, 'reg_lambda': 6.418625095977757e-05}. Best is trial 8 with value: 0.8097585272316887.\n",
+      "[I 2025-03-27 13:37:05,718] Trial 32 finished with value: 0.8077263951284009 and parameters: {'max_depth': 7, 'learning_rate': 0.0793792241375177, 'n_estimators': 441, 'min_child_weight': 1, 'gamma': 0.01130876327199611, 'subsample': 0.950405129167282, 'colsample_bytree': 0.6523676535856746, 'reg_alpha': 1.515626560550884e-07, 'reg_lambda': 0.001246780109623724}. Best is trial 8 with value: 0.8097585272316887.\n",
+      "[I 2025-03-27 13:37:29,675] Trial 29 finished with value: 0.8081317140596893 and parameters: {'max_depth': 8, 'learning_rate': 0.05018483682859836, 'n_estimators': 413, 'min_child_weight': 5, 'gamma': 0.08724118317158555, 'subsample': 0.9169029128450368, 'colsample_bytree': 0.915007436452555, 'reg_alpha': 0.00014314363807979466, 'reg_lambda': 3.66332894853908e-07}. Best is trial 8 with value: 0.8097585272316887.\n",
+      "[I 2025-03-27 13:37:50,028] Trial 33 finished with value: 0.8018463660690506 and parameters: {'max_depth': 8, 'learning_rate': 0.02109094491957827, 'n_estimators': 239, 'min_child_weight': 4, 'gamma': 0.017659688753265318, 'subsample': 0.7761087598866913, 'colsample_bytree': 0.7873597922286042, 'reg_alpha': 4.897055367116247e-05, 'reg_lambda': 4.916401999969121e-08}. Best is trial 8 with value: 0.8097585272316887.\n",
+      "[I 2025-03-27 13:39:21,187] Trial 40 finished with value: 0.8043872582215508 and parameters: {'max_depth': 7, 'learning_rate': 0.053580022184625056, 'n_estimators': 167, 'min_child_weight': 3, 'gamma': 4.872899144228917e-06, 'subsample': 0.7985267536169358, 'colsample_bytree': 0.9516775379404567, 'reg_alpha': 5.313683081006009e-07, 'reg_lambda': 0.0003318470494674361}. Best is trial 8 with value: 0.8097585272316887.\n",
+      "[I 2025-03-27 13:40:44,421] Trial 43 finished with value: 0.8019679310040839 and parameters: {'max_depth': 6, 'learning_rate': 0.23993086677244893, 'n_estimators': 336, 'min_child_weight': 3, 'gamma': 0.0008240389169619051, 'subsample': 0.7221915759300108, 'colsample_bytree': 0.9979854596083995, 'reg_alpha': 2.1824019325084638e-08, 'reg_lambda': 2.83548563324733e-08}. Best is trial 8 with value: 0.8097585272316887.\n",
+      "[I 2025-03-27 13:40:49,268] Trial 38 finished with value: 0.786967601960163 and parameters: {'max_depth': 6, 'learning_rate': 0.02737712457006272, 'n_estimators': 173, 'min_child_weight': 1, 'gamma': 0.00012129095117071635, 'subsample': 0.7540218045558513, 'colsample_bytree': 0.8568182336655186, 'reg_alpha': 1.6581783910535616e-08, 'reg_lambda': 5.365662633783609e-07}. Best is trial 8 with value: 0.8097585272316887.\n",
+      "[I 2025-03-27 13:40:57,342] Trial 35 finished with value: 0.8065853299941237 and parameters: {'max_depth': 7, 'learning_rate': 0.04295424073232121, 'n_estimators': 218, 'min_child_weight': 1, 'gamma': 0.0005959976738549167, 'subsample': 0.8210859643639365, 'colsample_bytree': 0.5358523382848007, 'reg_alpha': 0.1740887567210113, 'reg_lambda': 0.0045443445857866}. Best is trial 8 with value: 0.8097585272316887.\n",
+      "[I 2025-03-27 13:41:04,599] Trial 41 finished with value: 0.8071353762169117 and parameters: {'max_depth': 8, 'learning_rate': 0.03957593359846482, 'n_estimators': 185, 'min_child_weight': 6, 'gamma': 0.001803297658867946, 'subsample': 0.70292926713843, 'colsample_bytree': 0.9969257153371542, 'reg_alpha': 1.1480095540022154e-07, 'reg_lambda': 6.037442098273899e-07}. Best is trial 8 with value: 0.8097585272316887.\n",
+      "[I 2025-03-27 13:41:48,485] Trial 44 finished with value: 0.8020855786331854 and parameters: {'max_depth': 8, 'learning_rate': 0.04034216520006757, 'n_estimators': 152, 'min_child_weight': 3, 'gamma': 0.03797195022688354, 'subsample': 0.732725104494883, 'colsample_bytree': 0.9701669282709443, 'reg_alpha': 4.574654841091877e-05, 'reg_lambda': 5.284825955780791e-07}. Best is trial 8 with value: 0.8097585272316887.\n",
+      "[I 2025-03-27 13:42:16,626] Trial 45 finished with value: 0.8042527618229157 and parameters: {'max_depth': 7, 'learning_rate': 0.10431610089240227, 'n_estimators': 159, 'min_child_weight': 6, 'gamma': 4.534728115771484e-05, 'subsample': 0.7431231120609555, 'colsample_bytree': 0.9777281407319117, 'reg_alpha': 0.00042948997954319094, 'reg_lambda': 9.361078348755815e-07}. Best is trial 8 with value: 0.8097585272316887.\n",
+      "[I 2025-03-27 13:42:20,196] Trial 30 finished with value: 0.778032649376165 and parameters: {'max_depth': 8, 'learning_rate': 0.00460474241338731, 'n_estimators': 352, 'min_child_weight': 1, 'gamma': 0.013336899293803196, 'subsample': 0.8807493557831807, 'colsample_bytree': 0.5442603627794986, 'reg_alpha': 2.923361638503136e-06, 'reg_lambda': 0.00043635809535172627}. Best is trial 8 with value: 0.8097585272316887.\n",
+      "[I 2025-03-27 13:43:07,111] Trial 46 finished with value: 0.805524571939469 and parameters: {'max_depth': 5, 'learning_rate': 0.041271107078866866, 'n_estimators': 433, 'min_child_weight': 4, 'gamma': 6.15467494044503e-08, 'subsample': 0.7449498432178773, 'colsample_bytree': 0.6968558620619213, 'reg_alpha': 0.4602892974908563, 'reg_lambda': 0.0007235995823012901}. Best is trial 8 with value: 0.8097585272316887.\n",
+      "[I 2025-03-27 13:43:08,021] Trial 49 finished with value: 0.8098791483578708 and parameters: {'max_depth': 6, 'learning_rate': 0.03850996274530274, 'n_estimators': 345, 'min_child_weight': 1, 'gamma': 0.0017225472623608818, 'subsample': 0.9225996195025038, 'colsample_bytree': 0.5098807637390822, 'reg_alpha': 1.4036815390261044e-05, 'reg_lambda': 1.6306396805684962e-06}. Best is trial 49 with value: 0.8098791483578708.\n",
+      "[I 2025-03-27 13:43:09,441] Trial 47 finished with value: 0.7933937383538358 and parameters: {'max_depth': 5, 'learning_rate': 0.016498606273603736, 'n_estimators': 385, 'min_child_weight': 7, 'gamma': 4.018950428618713e-07, 'subsample': 0.7148186310232252, 'colsample_bytree': 0.5091880156886879, 'reg_alpha': 0.003364075914557314, 'reg_lambda': 0.00035467832916583384}. Best is trial 49 with value: 0.8098791483578708.\n",
+      "[I 2025-03-27 13:43:13,083] Trial 42 finished with value: 0.8063282506146786 and parameters: {'max_depth': 8, 'learning_rate': 0.027502836607323305, 'n_estimators': 321, 'min_child_weight': 1, 'gamma': 0.00015685673058305616, 'subsample': 0.9768189494062837, 'colsample_bytree': 0.5282832207776694, 'reg_alpha': 1.33344724757229e-05, 'reg_lambda': 0.19100534470519248}. Best is trial 49 with value: 0.8098791483578708.\n",
+      "[I 2025-03-27 13:43:29,849] Trial 48 finished with value: 0.8056772671176933 and parameters: {'max_depth': 7, 'learning_rate': 0.01775354629816946, 'n_estimators': 441, 'min_child_weight': 7, 'gamma': 1.6551415294667926e-07, 'subsample': 0.8650358099068844, 'colsample_bytree': 0.6538729604128032, 'reg_alpha': 0.16111116690761637, 'reg_lambda': 0.0015653469740780587}. Best is trial 49 with value: 0.8098791483578708.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Best trial:\n",
+      "  Value (Accuracy): 0.8098791483578708\n",
+      "  Params:\n",
+      "    max_depth: 6\n",
+      "    learning_rate: 0.03850996274530274\n",
+      "    n_estimators: 345\n",
+      "    min_child_weight: 1\n",
+      "    gamma: 0.0017225472623608818\n",
+      "    subsample: 0.9225996195025038\n",
+      "    colsample_bytree: 0.5098807637390822\n",
+      "    reg_alpha: 1.4036815390261044e-05\n",
+      "    reg_lambda: 1.6306396805684962e-06\n"
      ]
     }
    ],
@@ -469,24 +510,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_f1 = 0.796359627026355\n",
+    "best_f1 = 0.8098791483578708\n",
     "best_params = {\n",
-    "    \"max_features\": 5000,\n",
-    "    \"min_df\": 3,\n",
-    "    \"ngram_range\": (1, 3),\n",
-    "    \"max_depth\": 8,\n",
-    "    \"learning_rate\": 0.22260998418525665,\n",
-    "    \"n_estimators\": 666,\n",
-    "    \"min_child_weight\": 2,\n",
-    "    \"gamma\": 0.005341979637780388,\n",
-    "    \"subsample\": 0.9900049863839708,\n",
-    "    \"colsample_bytree\": 0.5918673659371315,\n",
-    "    \"reg_alpha\": 6.834558057096682e-08,\n",
-    "    \"reg_lambda\": 0.008776003604199037,\n",
+    "    \"max_depth\": 6,\n",
+    "    \"learning_rate\": 0.03850996274530274,\n",
+    "    \"n_estimators\": 345,\n",
+    "    \"min_child_weight\": 1,\n",
+    "    \"gamma\": 0.0017225472623608818,\n",
+    "    \"subsample\": 0.9225996195025038,\n",
+    "    \"colsample_bytree\": 0.5098807637390822,\n",
+    "    \"reg_alpha\": 1.4036815390261044e-05,\n",
+    "    \"reg_lambda\": 1.6306396805684962e-06,\n",
     "}"
    ]
   }
